tests/models/enum/named/string/fail/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2)]
        value: String
    },
}
fn main() {}
